<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">WList</string>
	<string name="confirm">Confirm</string>
	<string name="cancel">Cancel</string>
	<string name="unknown">Unknown</string>
	<string name="advance">Advance</string>
	<string name="normal">Normal</string>
	<string name="toast_no_read_permissions">File read permission not granted, unable to upload file。</string>
	<string name="toast_no_write_permissions">File write permission not granted, unable to download file。</string>
	<string name="toast_fatal_application_initialization">Failed to initialize application.</string>
	<string name="toast_press_again_to_exit">Press again to exit the app.</string>
	<string name="activity_login_welcome">Welcome to wlist</string>
	<string name="activity_login_enter_passport">Please enter phone number.</string>
	<string name="activity_login_enter_password">Please enter password</string>
	<string name="activity_main_server_closed">Server has been closed. Please connect again.</string>
	<string name="activity_main_chooser_file">File</string>
	<string name="activity_main_chooser_user">User</string>
	<string name="page_file_connect_internal_server">Start internal server.</string>
	<string name="page_file_connect_internal_server_starting">Starting internal server…</string>
	<string name="page_file_connect_external_server">Connect external server.</string>
	<string name="page_file_connect_external_server_host">Host:</string>
	<string name="page_file_connect_external_server_port">Port:</string>
	<string name="page_file_connect_external_server_username">Username:</string>
	<string name="page_file_connect_external_server_password">Password:</string>
	<string name="page_file_connect_external_server_invalid_address">Invalid host and port!</string>
	<string name="page_file_connect_connecting">Connecting to server…</string>
	<string name="page_file_connect_logging_in">Connected to server. Logging in…</string>
	<string name="page_file_connect_invalid_password">Incorrect password.</string>
	<string name="page_file_connect_internal_server_unavailable">Current version is no longer available, please check update.</string>
	<string name="page_file_connect_closing">The server is closing. Please try later.</string>
	<string name="page_file_unavailable_directory">Current directory is not available.</string>
	<string name="page_file_counter">items</string>
	<string name="page_file_loading">Loading more…</string>
	<string name="page_file_no_more">No more file.</string>
	<string name="page_file_tips" translatable="false">{0} | {1}</string>
	<string name="page_file_loading_text" translatable="false">{0} / {1}</string>
	<string name="page_file_loading_percent" translatable="false">{0,number,#.##%}</string>
	<string name="page_file_operation">Details</string>
	<string name="page_file_operation_name">Name: </string>
	<string name="page_file_operation_size">Size: </string>
	<string name="page_file_operation_create">Create time: </string>
	<string name="page_file_operation_update">Update time: </string>
	<string name="page_file_operation_rename">Rename</string>
	<string name="page_file_operation_move">Move</string>
	<string name="page_file_operation_copy">Copy</string>
	<string name="page_file_operation_trash">Delete</string>
	<string name="page_file_operation_download">Download</string>
	<string name="page_file_operation_rename_success">Renamed.</string>
	<string name="page_file_operation_rename_failure">Failed to rename. {0}</string>
	<string name="page_file_operation_move_success">Moved.</string>
	<string name="page_file_operation_move_failure">Failed to move. {0}</string>
	<string name="page_file_operation_copy_success">Copied.</string>
	<string name="page_file_operation_copy_failure">Failed to copy. {0}</string>
	<string name="page_file_operation_trash_success">Deleted.</string>
	<string name="page_file_operation_download_success">Downloaded.</string>
	<string name="page_file_operation_complex">This operation is not supported directly by the storage. Running in task mode.</string>
	<string name="page_file_create">Create</string>
	<string name="page_file_create_directory">New Directory</string>
	<string name="page_file_create_storage">Web Storage</string>
	<string name="page_file_upload">Upload</string>
	<string name="page_file_upload_file">File</string>
	<string name="page_file_upload_picture">Picture</string>
	<string name="page_file_upload_video">Video</string>
	<string name="page_file_upload_directory_name">New directory</string>
	<string name="page_file_upload_directory_hint">Directory Name.</string>
	<string name="page_file_upload_success_directory">Created directory.</string>
	<string name="page_file_upload_success_file">Uploaded file.</string>
	<string name="page_file_upload_no_filename">Failed to get filename. {0}</string>
	<string name="page_file_listing_title">Building index:\n\t{0}</string>
	<string name="page_file_options_refresh">Refresh and sync.</string>
	<string name="page_file_options_refresh_warning">Refresh may cause a long time!</string>
	<string name="page_file_options_refresh_title">Refreshing: {0}</string>
	<string name="page_file_options_refresh_success">Refreshed successfully.</string>
	<string name="page_file_options_sorter">Sort.</string>
	<string name="page_file_options_sorter_name">Sort by name.</string>
	<string name="page_file_options_sorter_size">Sort by size.</string>
	<string name="page_file_options_sorter_time">Sort by update time.</string>
	<string name="page_file_options_sorter_ascend">ASCEND</string>
	<string name="page_file_options_sorter_descend">DESCEND</string>
	<string name="page_file_options_sorter_not_chose">Please choose the sort policy.</string>
	<string name="page_file_options_filter">Filter.</string>
	<string name="page_file_options_filter_both">Both directories and files.</string>
	<string name="page_file_options_filter_directory">Only directories.</string>
	<string name="page_file_options_filter_file">Only files.</string>
	<string name="page_file_options_disconnect">Disconnection.</string>
	<string name="page_file_options_close_server">Close server.</string>
	<string name="page_file_preview_unsupported">Current version is not supported to preview.</string>
	<string name="page_task">Tasks</string>
	<string name="page_task_working">Working. ({0})</string>
	<string name="page_task_failure">Failed. ({0})</string>
	<string name="page_task_success">Succeed. ({0})</string>
	<string name="page_task_download" translatable="false">@string/page_file_operation_download</string>
	<string name="page_task_upload" translatable="false">@string/page_file_upload</string>
	<string name="page_task_trash" translatable="false">@string/page_file_operation_trash</string>
	<string name="page_task_copy" translatable="false">@string/page_file_operation_copy</string>
	<string name="page_task_move" translatable="false">@string/page_file_operation_move</string>
	<string name="page_task_rename" translatable="false">@string/page_file_operation_rename</string>
	<string name="page_task_remove_all">Remove all.</string>
	<string name="page_task_retry_all">Retry all.</string>
	<string name="page_task_process" translatable="false">@string/page_file_loading_percent</string>
	<string name="page_task_size_speed" translatable="false">{0} / {1} ({2}/s)</string>
	<string name="page_task_time">ETA: {0}</string>
	<string name="page_task_waiting">Blocking.</string>
	<string name="page_task_failure_reason" translatable="false">{0}: {1}</string>
	<string name="page_task_remove">Remove the task.</string>
	<string name="page_task_download_manager_waiting">Please wait while the download manager is starting.</string>
	<string name="page_task_download_manager_failure">Something went wrong during initializing the download manager. Retry later.</string>
	<string name="page_task_download_working_preparing">Download is about to begin.</string>
	<string name="page_task_download_working_finishing">Please waiting…</string>
	<string name="page_task_download_success_path">Saved: {0}</string>
	<string name="page_task_download_remove_file">Confirm and delete file.</string>
	<string name="page_task_download_success_deleted">Deleted</string>
	<string name="page_task_upload_working_preparing">Upload is about to begin.</string>
	<string name="page_task_upload_working_finishing">Please waiting…</string>
	<string name="page_task_trash_manager_waiting">Please wait while the trash manager is starting.</string>
	<string name="page_task_trash_manager_failure">Something went wrong during initializing the trash manager. Retry later.</string>
	<string name="page_task_trash_progress" translatable="false">@string/page_file_loading_text</string>
	<string name="page_task_trash_time">Deleted time: {0}</string>
	<string name="page_task_rename_manager_waiting">Please wait while the rename manager is starting.</string>
	<string name="page_task_rename_manager_failure">Something went wrong during initializing the rename manager. Retry later.</string>
	<string name="page_task_rename_working">Renaming…</string>
	<string name="page_task_move_manager_waiting">Please wait while the move manager is starting.</string>
	<string name="page_task_move_manager_failure">Something went wrong during initializing the move manager. Retry later.</string>
	<string name="page_task_move_working">Moving…</string>
	<string name="page_task_copy_manager_waiting">Please wait while the copy manager is starting.</string>
	<string name="page_task_copy_manager_failure">Something went wrong during initializing the copy manager. Retry later.</string>
	<string name="page_task_copy_working">Copying…</string>
	<string name="page_file_provider_delete">Confirm and delete index.</string>
	<string name="page_file_provider_lanzou">Lanzou</string>
	<string name="page_file_provider_name">Storage name: </string>
	<string name="page_file_provider_passport">Storage passport: </string>
	<string name="page_file_provider_password">Storage password: </string>
</resources>
