<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@color/background_differ"
                                                   tools:ignore="Overdraw">

	<View
		android:id="@+id/page_task_title"
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:background="@color/background_normal"
		android:orientation="horizontal"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<androidx.appcompat.widget.AppCompatImageView
		android:id="@+id/page_task_backer"
		android:layout_width="wrap_content"
		android:layout_height="0dp"
		android:adjustViewBounds="true"
		android:paddingStart="10dp"
		android:paddingTop="15dp"
		android:paddingBottom="15dp"
		android:src="@drawable/backer"
		app:layout_constraintBottom_toBottomOf="@id/page_task_title"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toLeftOf="@id/page_task_title_text"
		app:layout_constraintTop_toTopOf="parent"
		tools:ignore="RtlSymmetry" />

	<androidx.appcompat.widget.AppCompatTextView
		android:id="@+id/page_task_title_text"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:ellipsize="end"
		android:gravity="center"
		android:maxLines="1"
		android:paddingStart="10dp"
		android:paddingEnd="10dp"
		android:text="@string/page_task"
		android:textColor="@color/text_normal"
		android:textSize="20sp"
		app:layout_constraintBottom_toBottomOf="@id/page_task_title"
		app:layout_constraintLeft_toRightOf="@id/page_task_backer"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/page_task_guideline_left"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		app:layout_constraintGuide_percent="0.05" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/page_task_guideline_right"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		app:layout_constraintGuide_percent="0.95" />

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/page_task_chooser"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:layout_marginBottom="10dp"
		android:background="@drawable/page_task_chooser"
		android:paddingTop="5dp"
		android:paddingBottom="5dp"
		app:layout_constraintBottom_toTopOf="@id/page_task_pager"
		app:layout_constraintLeft_toRightOf="@id/page_task_guideline_left"
		app:layout_constraintRight_toLeftOf="@id/page_task_guideline_right"
		app:layout_constraintTop_toBottomOf="@id/page_task_title">

		<View
			android:id="@+id/page_task_chooser_hint_top"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:background="@drawable/page_task_chooser_hint"
			app:layout_constraintBottom_toBottomOf="@id/page_task_chooser_download"
			app:layout_constraintLeft_toLeftOf="@id/page_task_chooser_download"
			app:layout_constraintRight_toRightOf="@id/page_task_chooser_download"
			app:layout_constraintTop_toTopOf="@id/page_task_chooser_download" />

		<View
			android:id="@+id/page_task_chooser_hint_bottom"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:background="@drawable/page_task_chooser_hint"
			android:visibility="gone"
			app:layout_constraintBottom_toBottomOf="@id/page_task_chooser_copy"
			app:layout_constraintLeft_toLeftOf="@id/page_task_chooser_copy"
			app:layout_constraintRight_toRightOf="@id/page_task_chooser_copy"
			app:layout_constraintTop_toTopOf="@id/page_task_chooser_copy" />

		<androidx.appcompat.widget.AppCompatTextView
			android:id="@+id/page_task_chooser_download"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:paddingTop="5dp"
			android:paddingBottom="5dp"
			android:text="@string/page_task_download"
			android:textColor="@color/text_normal"
			android:textSize="15sp"
			app:layout_constraintBottom_toTopOf="@id/page_task_chooser_copy"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toLeftOf="@id/page_task_chooser_upload"
			app:layout_constraintTop_toTopOf="@id/page_task_chooser" />

		<androidx.appcompat.widget.AppCompatTextView
			android:id="@+id/page_task_chooser_upload"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:paddingTop="5dp"
			android:paddingBottom="5dp"
			android:text="@string/page_task_upload"
			android:textColor="@color/text_normal"
			android:textSize="15sp"
			app:layout_constraintBottom_toTopOf="@id/page_task_chooser_move"
			app:layout_constraintLeft_toRightOf="@id/page_task_chooser_download"
			app:layout_constraintRight_toLeftOf="@id/page_task_chooser_trash"
			app:layout_constraintTop_toTopOf="@id/page_task_chooser" />

		<androidx.appcompat.widget.AppCompatTextView
			android:id="@+id/page_task_chooser_trash"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:paddingTop="5dp"
			android:paddingBottom="5dp"
			android:text="@string/page_task_trash"
			android:textColor="@color/text_normal"
			android:textSize="15sp"
			android:visibility="invisible"
			app:layout_constraintBottom_toTopOf="@id/page_task_chooser_rename"
			app:layout_constraintLeft_toRightOf="@id/page_task_chooser_upload"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="@id/page_task_chooser" />

		<androidx.appcompat.widget.AppCompatImageView
			android:id="@+id/page_task_chooser_more"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:src="@drawable/page_task_more"
			app:layout_constraintBottom_toBottomOf="@id/page_task_chooser_trash"
			app:layout_constraintLeft_toLeftOf="@id/page_task_chooser_trash"
			app:layout_constraintRight_toRightOf="@id/page_task_chooser_trash"
			app:layout_constraintTop_toTopOf="@id/page_task_chooser_trash" />

		<androidx.appcompat.widget.AppCompatTextView
			android:id="@+id/page_task_chooser_copy"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:paddingTop="5dp"
			android:paddingBottom="5dp"
			android:text="@string/page_task_copy"
			android:textColor="@color/text_normal"
			android:textSize="15sp"
			android:visibility="gone"
			app:layout_constraintBottom_toBottomOf="@id/page_task_chooser"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toLeftOf="@id/page_task_chooser_move"
			app:layout_constraintTop_toBottomOf="@id/page_task_chooser_download" />

		<androidx.appcompat.widget.AppCompatTextView
			android:id="@+id/page_task_chooser_move"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:paddingTop="5dp"
			android:paddingBottom="5dp"
			android:text="@string/page_task_move"
			android:textColor="@color/text_normal"
			android:textSize="15sp"
			android:visibility="gone"
			app:layout_constraintBottom_toBottomOf="@id/page_task_chooser"
			app:layout_constraintLeft_toRightOf="@id/page_task_chooser_copy"
			app:layout_constraintRight_toLeftOf="@id/page_task_chooser_rename"
			app:layout_constraintTop_toBottomOf="@id/page_task_chooser_upload" />

		<androidx.appcompat.widget.AppCompatTextView
			android:id="@+id/page_task_chooser_rename"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:paddingTop="5dp"
			android:paddingBottom="5dp"
			android:text="@string/page_task_rename"
			android:textColor="@color/text_normal"
			android:textSize="15sp"
			android:visibility="gone"
			app:layout_constraintBottom_toBottomOf="@id/page_task_chooser"
			app:layout_constraintLeft_toRightOf="@id/page_task_chooser_move"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toBottomOf="@id/page_task_chooser_trash" />

	</androidx.constraintlayout.widget.ConstraintLayout>

	<androidx.viewpager2.widget.ViewPager2
		android:id="@+id/page_task_pager"
		android:layout_width="0dp"
		android:layout_height="0dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@id/page_task_chooser" />

</androidx.constraintlayout.widget.ConstraintLayout>
